# amplifier-bundle-attractor

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  SPEC_CONFORMANCE.md  SUPPORT.md  bundle.md  pr_body.txt
.amplifier/: settings.yaml
.github/: PULL_REQUEST_TEMPLATE.md
agents/: attractor-agent-anthropic-isolated.yaml  attractor-agent-anthropic.yaml  attractor-agent-gemini-isolated.yaml  attractor-agent-gemini.yaml  attractor-agent-openai-isolated.yaml  attractor-agent-openai.yaml  attractor-expert.md  pipeline-runner.yaml
behaviors/: attractor-core.yaml
bundles/: attractor-agent.yaml  attractor-interactive.yaml  attractor-pipeline.yaml
context/: dot-reference.md  engine-semantics.md  isolated-environment-guidance.md  pipeline-awareness.md  system-attractor-expert.md
docs/: APP-INTEGRATION-GUIDE.md  DOT-AUTHORING-GUIDE.md  DOT-SYNTAX.md  GETTING-STARTED.md  PIPELINE_PATTERNS.md  ROUTING-REFERENCE.md
examples/: programmatic_usage.py
modules/hooks-pipeline-observability/: pyproject.toml
modules/hooks-pipeline-observability/amplifier_module_hooks_pipeline_observability/: __init__.py  aggregator.py  models.py  status_bar.py
modules/hooks-pipeline-observability/tests/: test_aggregator.py  test_model_resolved_event.py  test_mount.py  test_status_bar.py
modules/hooks-pipeline-progress/: pyproject.toml
modules/hooks-pipeline-progress/amplifier_module_hooks_pipeline_progress/: __init__.py
modules/hooks-tool-truncation/: pyproject.toml
modules/loop-agent/: pyproject.toml
modules/loop-agent/amplifier_module_loop_agent/: __init__.py  agent_session.py  config.py  env_filter.py  events.py  loop_detection.py  subagent_tools.py  system_prompt.py
modules/loop-agent/tests/: test_agent_session.py  test_arg_validation.py  test_awaiting_input.py  test_cancellation.py  test_config.py  test_context_window.py  test_env_filtering.py  test_error_handling.py  test_events.py  test_integration_smoke.py  test_loop_detection.py  test_mount.py  test_parallel_gating.py  test_parity_matrix.py  test_provider_aligned_tools.py  test_provider_doc_filtering.py  test_session_end_timing.py  test_steering.py  test_streaming.py  test_subagent_tools.py  test_subagents.py  test_system_prompt_wiring.py  test_tool_output_delta.py  test_tool_registry.py  test_truncation_wiring.py  test_unified_provider_adapter.py
modules/loop-pipeline/: pyproject.toml
modules/loop-pipeline/amplifier_module_loop_pipeline/: __init__.py  artifacts.py  backend.py  checkpoint.py  conditions.py  dot_parser.py  edge_selection.py  engine.py  graph.py  outcome.py  pipeline_events.py  retry.py  run_identity.py  stylesheet.py  substitution.py  transforms.py  validation.py
modules/loop-pipeline/amplifier_module_loop_pipeline/handlers/: __init__.py  codergen.py  conditional.py  context.py  exit.py  fan_in.py  human.py  manager_loop.py  parallel.py  pipeline.py  start.py  tool.py
modules/loop-pipeline/tests/: conftest.py  test_artifacts.py  test_attribute_passthrough.py  test_backend.py  test_backend_clone.py  test_backend_fidelity.py  test_backend_full_continuity.py  test_batch_d_pipeline_infra.py  test_cancellation.py  test_checkpoint.py  test_conditional_handler.py  test_conditions.py  test_context.py  test_contract_violation_event.py  test_direct_backend_fidelity.py  test_doc_consistency.py  test_dot_integration.py  test_dot_interop.py  test_dot_parser.py  test_eager_reference_scan.py  test_edge_selection.py  test_engine.py  test_engine_artifacts.py  test_engine_bug_g_parallel_component_fanout.py  test_engine_bug_h_requires_attribute.py  test_execution_environment.py  test_failure_routing.py  test_fan_in_bfs.py  test_folder_node_failure_routing.py  test_foundry_admissions.py  test_foundry_e2e.py  test_foundry_generate_machine.py  test_foundry_machine_design.py  test_goal_gate_retry_clears_failures.py  test_goal_gates.py  test_graph_model.py  test_handler_backend_continuity_wiring.py  test_handler_context.py  test_handler_registry_clone.py  test_handlers.py  (+50 more)
modules/loop-pipeline/tests/fixtures/: child_pipeline.dot  parent_with_child.dot  spec_branching.dot
modules/loop-pipeline/tests/fixtures/integration/: consensus_task.dot
modules/tool-apply-patch/: pyproject.toml
modules/tool-dashboard-query/: pyproject.toml
modules/tool-dashboard-query/amplifier_module_tool_dashboard_query/: __init__.py
modules/tool-dashboard-query/tests/: test_dashboard_query.py
modules/tool-pipeline-run/: pyproject.toml
modules/tool-pipeline-run/amplifier_module_tool_pipeline_run/: __init__.py
modules/tool-pipeline-status/: pyproject.toml
modules/tool-pipeline-status/amplifier_module_tool_pipeline_status/: __init__.py
modules/tool-pipeline-status/tests/: test_pipeline_status.py
modules/tool-report-outcome/: pyproject.toml
modules/unified-llm-client/: README.md  pyproject.toml
modules/unified-llm-client/tests/adapter/: test_anthropic.py  test_gemini.py  test_gemini_schema_sanitizer.py  test_openai.py  test_openai_compat.py  test_ulm5_raw_and_ulm6_rate_limit.py
modules/unified-llm-client/tests/dod/: test_8_10_integration_smoke.py  test_8_1_core_infra.py  test_8_2_provider_adapters.py  test_8_3_content_model.py  test_8_4_generation.py  test_8_5_reasoning.py  test_8_6_caching.py  test_8_7_tool_calling.py  test_8_8_error_handling.py  test_8_9_cross_provider_parity.py  test_multi_turn_cache_efficiency.py
modules/unified-llm-client/tests/unit/: test_catalog.py  test_client.py  test_errors.py  test_generate.py  test_middleware.py  test_public_api.py  test_pyright_clean.py  test_resolver.py  test_retry.py  test_stream_validation.py  test_types.py
modules/unified-llm-client/unified_llm/: __init__.py  catalog.py  client.py  errors.py  generate.py  middleware.py  retry.py  stream_validation.py  types.py
modules/unified-llm-client/unified_llm/adapters/: __init__.py  _openai_strict_schema.py  anthropic.py  gemini.py  openai.py  openai_compat.py
modules/unified-llm-client/unified_llm/data/: models.json
profiles/: attractor-e2e-anthropic.yaml  attractor-e2e-gemini.yaml  attractor-profile-anthropic.yaml  (+4 more)
(+128 files in other folders)
