[project]
name = "amplifier-module-hooks-tool-truncation"
version = "0.1.0"
description = "Hook module - Tool output truncation for context management"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core>=0.1.0",
]

[project.entry-points."amplifier.modules"]
hooks-tool-truncation = "amplifier_module_hooks_tool_truncation:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true



[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_hooks_tool_truncation",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
