[project]
name = "amplifier-module-loop-agent"
version = "0.1.0"
description = "Attractor coding agent loop orchestrator for Amplifier"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = ["amplifier-core>=0.1.0"]

[project.entry-points."amplifier.modules"]
loop-agent = "amplifier_module_loop_agent:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_loop_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "amplifier-core",
    "unified-llm-client",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]



[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
pythonpath = [".", "../../../unified-llm-client"]
