[project]
name = "amplifier-module-tool-dashboard-query"
version = "0.1.0"
description = "Dashboard query tool module for Amplifier - pipeline status queries and management via HTTP API"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core>=0.1.0",
    "httpx>=0.24",
]

[project.entry-points."amplifier.modules"]
tool-dashboard-query = "amplifier_module_tool_dashboard_query:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { path = "../../../amplifier-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_dashboard_query"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.24",
]