[project]
name = "amplifier-module-tool-pipeline-run"
version = "0.1.0"
description = "Pipeline runner tool module for Amplifier - invoke DOT graph pipelines at runtime"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core>=0.1.0",
]

[project.entry-points."amplifier.modules"]
tool-pipeline-run = "amplifier_module_tool_pipeline_run:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true



[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_pipeline_run"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
