[project]
name = "amplifier-module-tool-pipeline-status"
version = "0.1.0"
description = "Pipeline status query tool module for Amplifier - returns pipeline execution state"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-pipeline-status = "amplifier_module_tool_pipeline_status:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { path = "../../../amplifier-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_pipeline_status"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]