[project]
name = "amplifier-module-tool-report-outcome"
version = "0.1.0"
description = "Report outcome tool module for Amplifier - structured pipeline result reporting"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core>=0.1.0",
]

[project.entry-points."amplifier.modules"]
tool-report-outcome = "amplifier_module_tool_report_outcome:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true



[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_report_outcome"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
