[project]
name = "unified-llm-client"
version = "0.1.0"
description = "Provider-agnostic LLM client — faithful implementation of the Attractor Unified LLM Client spec"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.40.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["unified_llm"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib -m 'not integration'"
asyncio_mode = "strict"
markers = [
    "integration: end-to-end tests requiring real API keys (OPENAI_API_KEY, ANTHROPIC_API_KEY, GEMINI_API_KEY)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]
